# Ros-Control-with-Gazebo

./: .gitignore  README.md  requirements-dev.txt
.devcontainer/: devcontainer.json
src/ackermann_car_example/: CMakeLists.txt  README.md  package.xml
src/ackermann_car_example/config/: car.yml  control.yaml  control.yml
src/ackermann_car_example/launch/: car.launch
src/ackermann_car_example/urdf/: axle.xacro  car.urdf  car.xacro  inertia.xacro  robot.sdf  robot.urdf  wheel.xacro
src/continuous_joint_examples/: CMakeLists.txt  README.md  package.xml
src/continuous_joint_examples/launch/: continuous_joint_robot.launch  continuous_velocity_joint_control.launch
src/continuous_joint_examples/urdf/: velocity_controlled_robot.urdf  wheel.urdf
src/gazebo_examples/: CMakeLists.txt  package.xml
src/gazebo_examples/launch/: simple_world.launch  simple_world_with_robot.launch  spawn_simple_robot.launch
src/joint_examples/: CMakeLists.txt  package.xml
src/joint_examples/config/: joint_control.yaml
src/joint_examples/launch/launch/: spawn_jointed_robot.launch
src/joint_examples/urdf/: jointed_robot.urdf
src/revolute_joint_examples/: CMakeLists.txt  README.md  package.xml
src/revolute_joint_examples/config/: effort_joint_control.yaml  positional_joint_control.yaml  velocity_joint_control.yaml
src/revolute_joint_examples/launch/: spawn_effort_control_jointed_robot.launch  spawn_jointed_robot.launch  spawn_positional_control_jointed_robot.launch  spawn_velocity_control_jointed_robot.launch
src/revolute_joint_examples/urdf/: effort_jointed_robot.urdf  positional_jointed_robot.urdf  velocity_jointed_robot.urdf
src/simple_example/: CMakeLists.txt  package.xml
src/simple_example/launch/: simple_world.launch  simple_world_with_robot.launch  spawn_simple_robot.launch
src/simple_example/models/: simple_robot.urdf
